prevent horizontal scroll and general weirdness caused by full width borders

--- a/regserver/regulations/static/regulations/css/less/media-queries.less
+++ b/regserver/regulations/static/regulations/css/less/media-queries.less
@@ -88,7 +88,6 @@
 
     .level-1 > li:after {
         margin-left: -10em;
-        width: 1000px;
     }
 }
 
@@ -131,7 +130,6 @@
 
     .level-1 > li:after {
         margin-left: -5em;
-        width: 730px;
     }
 }
 
