--- a/regserver/regulations/static/regulations/css/less/typography.less
+++ b/regserver/regulations/static/regulations/css/less/typography.less
@@ -243,10 +243,10 @@ This attempts to define global rules for a clear hierarchical structure.
     padding-top: 1em;
     height: 1px;
     display: block;
-    width: 1200px;
     border-bottom: 1px solid @light_field;
     content: '';
-    margin-left: -19em;
+    margin-left: -14em;
+    margin-right: -60px;
 }
 
 
